--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 
 name = "rust-hello-world"
 version = "0.0.1"
-authors = ["Cody P Schafer <dev@codyps.com>"]
+authors = ["Shoaib <shoaib@actonate.com>"]
+repository="https://github.com/shoaibmerchant/rust-hello-world"
 
 [dependencies]
 bevy = "0.8"
