--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ authors = ["Shoaib <shoaib@actonate.com>"]
 repository="https://github.com/shoaibmerchant/rust-hello-world"
 
 [dependencies]
-bevy = "0.6.1"
+bevy = { version = "0.6.1", features = ["wayland"] }
 
 [profile.release]
 lto = true
-
