--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 
-name = "rust-hello-world"
+name = "rust_bey"
 version = "0.0.1"
 edition = "2021"
 authors = ["Shoaib <shoaib@actonate.com>"]
-repository="https://github.com/shoaibmerchant/rust-hello-world"
+repository="https://github.com/shoaibmerchant/rust_bevy"
 
 [dependencies]
 bevy = { version = "0.9.1", features = ["wayland"] }
